--- a/src/tools/cargotest/Payload.toml
+++ b/src/tools/cargotest/Payload.toml
@@ -1,9 +1,9 @@
 [package]
-name = "cargotest2"
+name = "payloadtest2"
 version = "0.1.0"
 authors = ["Brian Anderson <banderson@mozilla.com>"]
 edition = "2018"
 
 [[bin]]
-name = "cargotest"
+name = "payloadtest"
 path = "main.rs"
