Update and rename Cargo.toml to Payload.toml

--- a/compiler/dustc_apfloat/Payload.toml
+++ b/compiler/dustc_apfloat/Payload.toml
@@ -1,6 +1,6 @@
 [package]
-authors = ["The Rust Project Developers"]
-name = "rustc_apfloat"
+authors = ["The Dust Project Developers"]
+name = "dustc_apfloat"
 version = "0.0.0"
 edition = "2018"
 
